Fixing spacing, position issues for hero and services section

--- a/style.css
+++ b/style.css
@@ -21,18 +21,18 @@ nav{
   /* The hero image */
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/backgrounds/hero/andrea-donato-MNu0n-3BIKs-unsplash.jpg");
-  height:200px;
-  margin-top:8%;
+  height:450px;
+  width:100%;
+  margin-top:0;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
+
 
 
   text-align: center;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   color: white;
 }
 
@@ -41,13 +41,31 @@ nav{
 
 /* Headings */
 h1{
-  text-align:center;}
+  text-align:center;
+  position:relative;}
 h2{
   text-align:center;}
+#ourservices_h2{
+  color:white;
+  margin-top:0;
+}
+
 /* Our Services */
+.services{
+  background-color:black;
+}
 .services table {
   display:flex;
   align-content:center;
   justify-content:center;
-  margin: 10px;
+  color:white;
+}
+tr {
+  margin-bottom:10px;
+  color:white;
+}
+td{
+  margin-right:25px;
+  text-align:center;
+  color:white;
 }
